--- a/styles.css
+++ b/styles.css
@@ -143,13 +143,17 @@ preis {
 
 /* === KUNDE === */
 
-.Lieferstatus {
+.Bestellstatus {
     background-color: yellow;
     width: 400px;
     border: 3px red solid;
     text-align: center; 
-    margin: auto;
-    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    height: auto;
+
+    
 }
 
 /* === PIZZABÄCKER === */
