--- a/styles.css
+++ b/styles.css
@@ -152,9 +152,18 @@ preis {
     margin-right: auto;
     margin-top: 40px;
     height: auto;
-
-    
 }
+
+/*.Baeckerstatus{
+    background-color: yellow;
+    width: 400px;
+    border: 3px red solid;
+    text-align: center; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    height: auto;
+}*/
 
 /* === PIZZABÄCKER === */
 
@@ -164,14 +173,33 @@ preis {
     border: 3px red solid;
     text-align: center; 
     margin: auto;
-    height: 300px;
+    height: 250px;
     
 }
 
-.bestellte-pizzen > span {
+.Baeckerstatus {
+    background-color: yellow;
+    width: 340px;
+    border: 3px red solid;
+    text-align: center; 
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: auto;   
+}
+
+.Baeckerstatus > span {
     position: relative;
-    left: 50px;
+    text-align: center;
     margin: 20px;
+}
+
+#radio {
+    position: relative;
+    text-align: center;
+    margin: 10px;
+    margin-left: 45px;
+    margin-right: 30px;
 }
 
 .bestellte-pizzen > fieldset {
@@ -188,6 +216,7 @@ preis {
     left: 100px;
     margin: 0.5rem;
 }
+
 
 /* === FAHRER === */
 
