--- a/styles.css
+++ b/styles.css
@@ -154,17 +154,6 @@ preis {
     height: auto;
 }
 
-/*.Baeckerstatus{
-    background-color: yellow;
-    width: 400px;
-    border: 3px red solid;
-    text-align: center; 
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    height: auto;
-}*/
-
 /* === PIZZABÄCKER === */
 
 #head {
@@ -173,8 +162,7 @@ preis {
     border: 3px red solid;
     text-align: center; 
     margin: auto;
-    height: 50px;
-    
+    height: 50px;  
 }
 
 .Baeckerstatus {
@@ -212,4 +200,35 @@ preis {
 .fahrer {
     margin-left: auto;
     margin-right: auto;  
+}
+
+#head_fahrer {
+    background-color: yellow;
+    width: 400px;
+    border: 3px red solid;
+    text-align: center; 
+    margin: auto;
+    height: 70px;  
+}
+
+.Fahrerstatus {
+    background-color: yellow;
+    width: 340px;
+    border: 3px red solid;
+    text-align: center; 
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: auto;   
+}
+
+.Fahrerstatus > span {
+    position: relative;
+    text-align: center;
+    margin: 20px;
+}
+
+.Fahrerstatus > form > fieldset {
+    border: 0;
+    padding: 0;
 }
