--- a/styles.css
+++ b/styles.css
@@ -212,3 +212,45 @@ font-weight: bold;
     text-decoration: underline;
     
     }
+
+    /* === FAHRER === */
+
+.fahrer {
+    margin-left: auto;
+    margin-right: auto;  
+}
+
+#head_fahrer {
+    background-color: yellow;
+    width: 400px;
+    border: 3px red solid;
+    text-align: center; 
+    margin: auto;
+    height: 70px;  
+}
+
+.Fahrerstatus {
+    background-color: yellow;
+    width: 340px;
+    border: 3px red solid;
+    text-align: center; 
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: auto;   
+}
+
+.Fahrerstatus > span {
+    position: relative;
+    text-align: center;
+    margin: 20px;
+}
+
+.Fahrerstatus > form > fieldset {
+    border: 0;
+    padding: 0;
+}
+.pizza123{
+    border: 5px;
+    font-size: 200%
+}
