--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 /* === FARBEN === */
 
 /*
@@ -8,6 +8,13 @@ Hell Grau:      #E5E5E5
 Rot:            #A62C21
 */
 
+html {
+    font-size: 100%;
+    font-family: "Nunito", Arial, sans-serif;
+    font-weight: normal;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
 body {
     margin: 0;
     font-family: 'Raleway', 'Lato', 'Helvetica Neue', 'Arial', sans-serif;
@@ -19,109 +26,156 @@ body {
     background-size: cover;
 }
 
-* {
+*, *:before, *:after {
     box-sizing: border-box;
-}
-/* === NAVIGATIONSLEISTE === */
-
-.header-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #3D3F45;
-    position: relative;
-    font-weight: bold;
-    font-size: 1.1rem;
-}
-
-.header-nav > a > h1 {
-    height: 30px;
-    width: auto;
-    position: absolute;
-    left: 2rem;
-    top: -2.0rem;
-    font-size: 40px;
-    color: black;
-}
-
-.header-nav > a > h1 > span {
-    color: #A62C21;
-}
-
-.header-nav > ul {
     margin: 0;
     padding: 0;
+  }
+/* === NAVBAR === */
+a {
+    color: #A0332B;
+    opacity: 1;
+    text-decoration: none;
+  }
+  a:hover {
+    opacity: 0.85;
+    text-decoration: underline;
+  }
+  
+  .content {
+    text-align: center;
+    margin-top: 2em;
+  }
+  
+  /* Navigation Styles */
+  /* Header */
+  .header {
+/* position: fixed; */
+    width: 100%;
+    background: #A0332B;
+    height: 3rem;
+    line-height: 50px;
+    box-shadow: 0 -3px 0 #bc3a3a inset;
+    top: 0;
+  
+  }
+  
+  .wrap {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  
+  .logo {
+    font-family: inherit;
+    font-size: 1.5em;
+    margin-left: 1em;
+  }
+  .logo > a > span {
+    color: black;
+}
+  .logo a {
+    font-size: 2.5rem;
+    color: #E5E5E5;
+    text-decoration: none;
+    opacity: 1;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+  }
+  .logo a:hover {
+    opacity: 0.85;
+  }
+  
+  /* Mobile menu */
+  #menu-icon {
+    display: block;
     position: absolute;
-    right: 2rem;
-    height: 100%;
-}
-.header-nav > ul > li {
-    display: inline-block;
-    height: 100%;
-    padding: 0 0.4rem 0 0.4rem;
-}
-
-.header-nav > ul > li > a {
-    margin: 0.8rem;
-    display: inline-block;
-}
-
-.header-nav > ul > li > a:link {
-    color: white;
-    text-decoration: none;
-}
-
-.header-nav > ul > li > a:visited {
-    color: white;
-    text-decoration: none;
-}
-
-.header-nav > ul > li > a:hover {
+    top: 0;
+    right: 1em;
     color: #E5E5E5;
     text-decoration: none;
-}
-
-.header-nav > ul > li > a:active {
-    color: #E5E5E5;
-    text-decoration: none;
-}
-
-.active {
-    background-color: #A62C21;
-}
-
-preis {
-    float: right;
-}
-.gericht, .preis {
-    color: #7e1100;
-    font-size: 1.25em;
     font-weight: bold;
-}
-/* === STARTSEITE === */
+    cursor: pointer;
+    opacity: 1;
+    padding: 0 0.4em;
+  }
+  #menu-icon:hover {
+    opacity: 0.85;
+    text-decoration: none;
+    border: none;
+  }
+  
+  .navbar {
+    background-color: #A0332B;
+    float: none;
+    max-height: 0;
+    overflow: hidden;
+    -moz-transition: max-height 0.4s;
+    -o-transition: max-height 0.4s;
+    -webkit-transition: max-height 0.4s;
+    transition: max-height 0.4s;
+  }
+  .navbar .menu {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  .navbar .menu li {
+    list-style-type: none;
+    display: block;
+  }
+  .navbar .menu li a {
+    display: block;
+    text-decoration: none;
+    color: #E5E5E5;
+    padding: 0 0.8em;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    border-bottom: 1px solid #C4493F;
+  }
+  .navbar .menu li a:hover {
+    background-color: #C4493F;
+  }
+  .navbar .menu li a.active {
+    background-color: #C4493F;
+  }
+  
+  .expand {
+    max-height: 20em;
+  }
+  
+ 
+  
 
 /* === BESTELLUNG === */
 
 .Speisekarte {
     background-color: yellow;
-    width: 400px;
+    width: 90%;
     height: auto;
     border: 3px red solid;
     text-align: center; 
     margin-left: auto;
-    margin-right: auto;  
+    margin-right: auto; 
+    margin-top: 5rem; 
 }
 
 .Warenkorb {
     background-color: yellow;
-    width: 400px;
+    width: 90%;
     border: 3px red solid;
     text-align: center; 
     margin-left: auto;
     margin-right: auto;  
+    margin-top : 2rem;
+    margin-bottom: 2rem;
 }
 
 .Formular {
-    width: 400px;
+    width: 90%;
     background-color: yellow;
     border: 3px red solid;
     text-align: center; 
@@ -145,10 +199,12 @@ preis {
 
 .Lieferstatus {
     background-color: yellow;
-    width: 500px;
+    width: 90%;
     border: 3px red solid;
     text-align: center; 
     margin: auto;
+    margin-top: 6rem; 
+    margin-bottom: 2rem;
     height: auto;
 }
 
@@ -160,6 +216,10 @@ preis {
     margin: 20px auto 20px auto;
     
     height: auto;
+}
+
+.block{
+  display: block;
 }
 
 /* === PIZZABÄCKER === */
@@ -226,6 +286,7 @@ font-weight: bold;
     border: 3px red solid;
     text-align: center; 
     margin: auto;
+    margin-top: 5rem;
     height: 70px;  
 }
 
@@ -251,6 +312,104 @@ font-weight: bold;
     padding: 0;
 }
 .pizza123{
+  vertical-align: middle;
     border: 5px;
     font-size: 200%
+}
+
+
+@media only screen and (min-width: 768px) {
+  .wrap {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  .Speisekarte{
+    width: 500px;
+  }
+  .Formular{
+    width: 500px;
+  }
+   .Warenkorb{
+    width:500px;
+  } 
+  .logo {
+    margin-left: 0;
+  }
+
+  .logo, .navbar {
+    display: inline-block;
+  }
+
+  /* Mobile menu icon */
+  #menu-icon {
+    display: none;
+  }
+
+  .navbar {
+    float: right;
+    max-height: none;
+  }
+  
+  .navbar .menu li {
+    list-style-type: none;
+    display: inline-block;
+    text-align: center;
+  }
+  .navbar .menu li a {
+    display: block;
+    border-bottom: 0;
+  }
+  .navbar .menu li a:hover {
+    box-shadow: 0 -3px 0 #A0332B inset;
+  }
+  .navbar .menu li a.active {
+    box-shadow: 0 -3px 0 #A0332B inset;
+  }
+}
+
+
+.myButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
+	box-shadow:inset 0px 1px 0px 0px #f29c93;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100));
+	background:-moz-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+	background:-webkit-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+	background:-o-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+	background:-ms-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100',GradientType=0);
+	background-color:#fe1a00;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #d83526;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-weight:bold;
+	padding:3px 3px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #b23e35;
+  vertical-align: middle;
+  font-size: .75rem;
+  margin-left: 1rem;
+
+  
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00));
+	background:-moz-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+	background:-webkit-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+	background:-o-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+	background:-ms-linear-gradient(top, #ce0100 5%, #fe1a00 100%);
+	background:linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00',GradientType=0);
+  background-color:#ce0100;
+  vertical-align: middle;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
