--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ preis {
 
 /* === PIZZABÄCKER === */
 
-#head {
+.head {
     background-color: yellow;
     width: 400px;
     border: 3px red solid;
