--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ a {
   /* Navigation Styles */
   /* Header */
   .header {
-/* position: fixed; */
+    position: fixed; 
     width: 100%;
     background: #A0332B;
     height: 3rem;
@@ -209,8 +209,9 @@ a {
 }
 
 .Status {
+
     background-color: yellow;
-    width: 400px;
+    width: 90%;
     border: 3px red solid;
     text-align: center;  
     margin: 20px auto 20px auto;
@@ -282,7 +283,7 @@ font-weight: bold;
 
 #head_fahrer {
     background-color: yellow;
-    width: 400px;
+    width: 90%;
     border: 3px red solid;
     text-align: center; 
     margin: auto;
@@ -329,9 +330,16 @@ font-weight: bold;
   .Formular{
     width: 500px;
   }
-   .Warenkorb{
+  #head_fahrer{
+    width: 500px;
+  }
+  .Warenkorb{
     width:500px;
   } 
+  .Lieferstatus{
+    width:500px;
+  } 
+  
   .logo {
     margin-left: 0;
   }
